Fixed flickering bug on flip

--- a/assets/css/my_cards.css
+++ b/assets/css/my_cards.css
@@ -67,6 +67,9 @@
 }
 .playing-cards .card .front {
     background-color: #fff;
+    -webkit-transform: translateZ(1px);
+    -moz-transform: translateZ(1px);
+    transform: translateZ(1px);
 }
 .playing-cards .card .back {
     background: url("../images/norwegian_rose_@2X.png");
@@ -74,9 +77,9 @@
     -webkit-box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
     -moz-box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
     -box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
+    -webkit-transform: rotateY(-180deg) translateZ(1px);
+    -moz-transform: rotateY(-180deg) translateZ(1px);
+    transform: rotateY(-180deg) translateZ(1px);
 }
 /**
  * Card look
